--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,5 +1,32 @@
-html,body{
-    height: 100%;
+html,
+body {
+    height : 100%;
     padding: 0;
-    margin: 0;
+    margin : 0;
+}
+
+.box-card {
+    width        : 1191px;
+    height       : 103px;
+    background   : rgba(255, 255, 255, 1);
+    box-shadow   : 0px 2px 5px 0px rgba(63, 63, 63, 0.35);
+    border-radius: 4px;
+
+    .short {
+        width: 100px;
+    }
+
+    .normal {
+        width: 150px;
+    }
+}
+
+// 底部的卡片
+.bottom-card {
+    margin-top: 19px;
+
+    .my-pagination {
+        margin-top: 30px;
+        text-align: center;
+    }
 }
