--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -5,28 +5,16 @@ body {
     margin : 0;
 }
 
-.box-card {
-    width        : 1191px;
-    height       : 103px;
-    background   : rgba(255, 255, 255, 1);
-    box-shadow   : 0px 2px 5px 0px rgba(63, 63, 63, 0.35);
-    border-radius: 4px;
 
-    .short {
-        width: 100px;
-    }
-
-    .normal {
-        width: 150px;
-    }
+/* 全局替换掉 Element-ui的对话框 */
+.el-dialog__header {
+    background: linear-gradient(to right, #00c6f9, #1495fb);
 }
 
-// 底部的卡片
-.bottom-card {
-    margin-top: 19px;
+.el-dialog__title {
+    color: white;
+}
 
-    .my-pagination {
-        margin-top: 30px;
-        text-align: center;
-    }
+.el-dialog__headerbtn .el-dialog__close {
+    color: white;
 }
